--- a/ToDoApp-Spring_MVC/pom.xml
+++ b/ToDoApp-Spring_MVC/pom.xml
@@ -4,6 +4,10 @@
   <groupId>com.ansh</groupId>
   <artifactId>ToDoApp</artifactId>
   <packaging>war</packaging>
+  <properties>
+    <maven.compiler.source>20</maven.compiler.source>
+    <maven.compiler.target>20</maven.compiler.target>
+  </properties>
   <version>1.0-SNAPSHOT</version>
   <name>ToDoApp Maven Webapp</name>
   <url>http://maven.apache.org</url>
@@ -14,6 +18,12 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>jakarta.servlet</groupId>
+      <artifactId>jakarta.servlet-api</artifactId>
+      <version>6.0.0</version>
+      <scope>provided</scope>
+    </dependency>
 
     <!-- https://mvnrepository.com/artifact/org.springframework/spring-webmvc -->
     <dependency>
@@ -21,6 +31,14 @@
       <artifactId>spring-webmvc</artifactId>
       <version>4.3.13.RELEASE</version>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/javax.servlet/jstl -->
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>jstl</artifactId>
+      <version>1.2</version>
+    </dependency>
+
 
   </dependencies>
   <build>
