--- a/ToDoApp-Spring_MVC/src/main/webapp/WEB-INF/web.xml
+++ b/ToDoApp-Spring_MVC/src/main/webapp/WEB-INF/web.xml
@@ -14,5 +14,9 @@
   <servlet-name>todo</servlet-name>
   <url-pattern>/</url-pattern>
   </servlet-mapping>
+  
+  <listener>
+    <listener-class>com.listeners.MYListener</listener-class>
+  </listener>
 
 </web-app>
