--- a/Spring_sec_jwt_v2/src/main/resources/application.yml
+++ b/Spring_sec_jwt_v2/src/main/resources/application.yml
@@ -6,3 +6,14 @@ spring:
     user:
       name: ansh
       password: ansh
+
+  datasource:
+    url: jdbc:mysql:///batch_cmd
+    password: root1234
+    username: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
