--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
 .DS_Store
+Node-Express/.idea/jsLibraryMappings.xml
+Node-Express/.idea/misc.xml
+Node-Express/.idea/modules.xml
+Node-Express/.idea/Node-Express.iml
+Node-Express/.idea/prettier.xml
+Node-Express/.idea/vcs.xml
+Node-Express/Exercise-tracker/.idea/.gitignore
+Node-Express/Exercise-tracker/.idea/Exercise-tracker.iml
+Node-Express/Exercise-tracker/.idea/misc.xml
+Node-Express/Exercise-tracker/.idea/modules.xml
+Node-Express/Exercise-tracker/.idea/prettier.xml
+Node-Express/Exercise-tracker/.idea/vcs.xml
+Node-Express/filemetadata/.idea/.gitignore
+Node-Express/filemetadata/.idea/filemetadata.iml
+Node-Express/filemetadata/.idea/misc.xml
+Node-Express/filemetadata/.idea/modules.xml
+Node-Express/filemetadata/.idea/vcs.xml
