--- a/Blockchain-freeCodeCamp/hardhat-fund-me-fcc/package.json
+++ b/Blockchain-freeCodeCamp/hardhat-fund-me-fcc/package.json
@@ -1,5 +1,7 @@
 {
-  "name": "hardhat-fund-me-fcc",
+  "name": "hardhat-fund-me",
+  "author": "Ansh Gupta",
+  "version": "0.0.1",
   "devDependencies": {
     "@chainlink/contracts": "^0.3.1",
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
@@ -17,7 +19,7 @@
     "solidity-coverage": "^0.8.5"
   },
   "scripts": {
-    "test": "hardhat test",
+    "test": "yarn hardhat test",
     "test:staging": "hardhat test --network sepolia",
     "lint": "solhint 'contracts/**/*.sol'",
     "lint:fix": "solhint 'contracts/**/*.sol' --fix",
